--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,8 @@
         <item>@color/colorAccent</item>
     </integer-array>
 
+    <color name="transparent">#00000000</color>
+
     <!-- http://www.google.com/design/spec/style/color.html#color-ui-color-palette -->
 
     <!--reds-->
